--- a/StoreApp/StoreApp.test/StoreApp.test.csproj
+++ b/StoreApp/StoreApp.test/StoreApp.test.csproj
@@ -17,7 +17,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Using Include="Xunit" />
+    <ProjectReference Include="..\StoreApp.Model\StoreApp.Model.csproj" />
   </ItemGroup>
 
 </Project>
