--- a/StoreApp/StoreApp.Server/AppSettings.json
+++ b/StoreApp/StoreApp.Server/AppSettings.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "MySQL": "Server=localhost;User Id=root;Password=43i8jy2pvts;Database=storeapp1;Port=3306;"
+    "MySQL": "Server=localhost;User=root;Password=43i8jy2pvts;Database=storeapp10;Port=3306;"
   },
   "AllowedHosts": "*"
 }
