--- a/StoreApp/StoreApp.WebApplication/StoreApp.WebApplication.csproj
+++ b/StoreApp/StoreApp.WebApplication/StoreApp.WebApplication.csproj
@@ -2,6 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
+	
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
@@ -17,6 +18,11 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="8.0.4" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="8.0.4" PrivateAssets="all" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.2" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="9.0.2">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
     <PackageReference Include="Microsoft.Extensions.ApiDescription.Client" Version="7.0.2">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
@@ -35,6 +41,9 @@
 	  <PackageReference Include="Blazorise.Icons.FontAwesome" Version="1.7.0" />
 	  <PackageReference Include="Blazorise.Icons.Material" Version="1.7.0" />
 	  <PackageReference Include="Blazorise.Material" Version="1.7.0" />
+	  <ProjectReference Include="..\StoreApp.Server\StoreApp.Server.csproj" />
+
   </ItemGroup>
+
 
 </Project>
